[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scripts"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rayon = "1.5.3"
rustc-hash = "1.1.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = "fat"
codegen-units = 1
panic = "abort"